--- a/calendar-rest/build.gradle
+++ b/calendar-rest/build.gradle
@@ -27,9 +27,9 @@ repositories {
 	maven { url "https://repo.spring.io/milestone" }
 }
 
-
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
+	compile("org.springframework.boot:spring-boot-starter-data-redis")
 }
